--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,16 @@ jobs:
         channel: 'stable'
         cache: true
     
+    - name: Verify Flutter installation
+      run: flutter doctor -v
+    
     - name: Install dependencies
-      run: flutter pub get
+      run: |
+        flutter pub get
     
     - name: Build APK
-      run: flutter build apk --release
+      run: |
+        flutter build apk --release
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
