--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,8 +54,12 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
     
+    - name: Analyze code (check for errors)
+      run: flutter analyze --no-fatal-infos || true
+    
     - name: Build APK
       run: flutter build apk --release
+      continue-on-error: false
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
