Fix dependency conflict: update syncfusion and override intl to 0.20.2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,9 @@ jobs:
         cat pubspec.yaml | head -5
     
     - name: Install dependencies
-      run: flutter pub get
+      run: |
+        flutter pub get || flutter pub upgrade --major-versions
+        flutter pub get
     
     - name: Analyze code (check for errors)
       run: flutter analyze --no-fatal-infos || true
