--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
-  intl: any
+  intl: ^0.20.2
 
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
@@ -82,7 +82,7 @@ dependencies:
   confetti: ^0.7.0
   animated_flip_counter: ^0.3.4
   fl_chart: ^0.68.0
-  syncfusion_flutter_pdfviewer: ^27.2.4
+  syncfusion_flutter_pdfviewer: ^27.2.5
   timezone: ^0.9.2
   flutter_inappwebview: ^6.0.0
   lottie: ^3.0.0
@@ -118,6 +118,7 @@ dependency_overrides:
       url: https://github.com/holzgeist/flutter_inappwebview
       path: flutter_inappwebview_android
       ref: d89b1d32638b49dfc58c4b7c84153be0c269d057
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
