--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,8 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
+# Android local.properties (contains local paths)
+android/local.properties
+
 # FVM Version Cache
 .fvm/
