--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -5,7 +5,7 @@
 # android.nonTransitiveRClass=false
 # android.nonFinalResIds=false
 # org.gradle.jvmargs=-Xmx4608m
- org.gradle.java.home=C:/Program Files/Java/jdk-17
+# org.gradle.java.home - Removed for CI/CD compatibility (will be auto-detected)
 org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
