Migrate to declarative Gradle plugins: fix app_plugin_loader plugin application

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,10 @@ jobs:
         cache: true
     
     - name: Verify Flutter installation
-      run: flutter doctor -v
+      run: |
+        flutter doctor -v
+        echo "FLUTTER_ROOT: $FLUTTER_ROOT"
+        echo "Flutter path: $(which flutter)"
     
     - name: Verify project structure
       run: |
