--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,36 @@
+pluginManagement {
+    def flutterSdkPath = {
+        def properties = new Properties()
+        def localPropertiesFile = new File(rootDir.parentFile.parentFile, "local.properties")
+        if (localPropertiesFile.exists()) {
+            localPropertiesFile.withInputStream { properties.load(it) }
+            def flutterSdkPath = properties.getProperty("flutter.sdk")
+            if (flutterSdkPath != null) {
+                return flutterSdkPath
+            }
+        }
+        // Fallback to environment variable (CI/CD)
+        def envPath = System.getenv("FLUTTER_ROOT")
+        if (envPath != null) {
+            return envPath
+        }
+        // Last resort: try to find from which flutter
+        throw new GradleException("Flutter SDK not found. Set FLUTTER_ROOT environment variable or configure local.properties")
+    }()
+
+    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+plugins {
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "com.android.application" version "8.4.1" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.0" apply false
+}
+
 include ':app'
-
-def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
-def properties = new Properties()
-
-assert localPropertiesFile.exists()
-localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
-
-def flutterSdkPath = properties.getProperty("flutter.sdk")
-assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
-apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
